refactor(accounting): refactor accounting
