# swagger.json
@@ -7,96 +7,6 @@
     "requestBodies": {},
     "responses": {},
     "schemas": {
-      "UAccountingEntityType": {
-        "type": "string",
-        "enum": ["individual", "sole_trader", "company"]
-      },
-      "UCategoryType": {
-        "type": "string",
-        "enum": [
-          "expense",
-          "sale",
-          "purchase",
-          "credit_note",
-          "debit_note",
-          "payment",
-          "receipt"
-        ]
-      },
-      "UCategoryStatus": {
-        "type": "string",
-        "enum": ["active", "archived"]
-      },
-      "ICategory": {
-        "properties": {
-          "id": {
-            "type": "string"
-          },
-          "name": {
-            "type": "string"
-          },
-          "accountingEntityType": {
-            "$ref": "#/components/schemas/UAccountingEntityType"
-          },
-          "type": {
-            "$ref": "#/components/schemas/UCategoryType"
-          },
-          "taxKey": {
-            "type": "string"
-          },
-          "status": {
-            "$ref": "#/components/schemas/UCategoryStatus"
-          },
-          "description": {
-            "type": "string"
-          },
-          "parentId": {
-            "type": "string",
-            "nullable": true
-          },
-          "createdBy": {
-            "type": "string",
-            "nullable": true
-          },
-          "createdAt": {
-            "type": "string",
-            "format": "date-time"
-          },
-          "updatedAt": {
-            "type": "string",
-            "format": "date-time"
-          },
-          "deletedAt": {
-            "type": "string",
-            "format": "date-time",
-            "nullable": true
-          }
-        },
-        "required": [
-          "id",
-          "name",
-          "accountingEntityType",
-          "type",
-          "taxKey",
-          "status",
-          "description",
-          "parentId",
-          "createdBy",
-          "createdAt",
-          "updatedAt",
-          "deletedAt"
-        ],
-        "type": "object",
-        "additionalProperties": false
-      },
-      "ULedgerType": {
-        "type": "string",
-        "enum": ["asset", "liability", "revenue", "expense", "equity"]
-      },
-      "UJournalDirection": {
-        "type": "string",
-        "enum": ["debit", "credit"]
-      },
       "IApiValidationError": {
         "properties": {
           "field": {
@@ -199,55 +109,6 @@
         "tags": ["Currency"],
         "security": [],
         "parameters": []
-      }
-    },
-    "/categories": {
-      "get": {
-        "operationId": "getCategories",
-        "responses": {
-          "200": {
-            "description": "",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "items": {
-                    "$ref": "#/components/schemas/ICategory"
-                  },
-                  "type": "array"
-                }
-              }
-            }
-          }
-        },
-        "description": "Gets the categories for an individual, sole trader or organization.",
-        "tags": ["Category"],
-        "security": [],
-        "parameters": [
-          {
-            "in": "header",
-            "name": "x-accounting-entity-type",
-            "required": true,
-            "schema": {
-              "$ref": "#/components/schemas/UAccountingEntityType"
-            }
-          },
-          {
-            "in": "query",
-            "name": "ledgerType",
-            "required": false,
-            "schema": {
-              "$ref": "#/components/schemas/ULedgerType"
-            }
-          },
-          {
-            "in": "query",
-            "name": "transactionDirection",
-            "required": false,
-            "schema": {
-              "$ref": "#/components/schemas/UJournalDirection"
-            }
-          }
-        ]
       }
     },
     "/auth/signup-with-email": {
